--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,13 @@
         <item name="android:textColor">#0D8547</item>
         <item name="android:textStyle">italic</item>
     </style>
+
+    <style name="text_white">
+        <item name="android:layout_width">339dp</item>
+        <item name="android:layout_height">148dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">34sp</item>
+        <item name="android:textStyle">bold|italic</item>
+    </style>
 </resources>
